# codekata

./: .gitignore
chess_lib/: CMakeLists.txt
chess_lib/include/: chess-util-typedefs.h  chess-util.h
chess_lib/src/: bitboard.c  found_magics.c  found_magics.h  move_gen.c
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  Game.tsx  Home.tsx  InnerApp.tsx  NineHoles.css  NineHoles.tsx  ThreeMensMorris.css  ThreeMensMorris.tsx  Tournament.tsx  api.ts  api.tsx
rust_binding/chess/: Cargo.toml
rust_binding/chess/src/: clib.rs  lib.rs
sample_client/: build.gradle
sample_client/src/main/kotlin/: Sample.kt
sample_client/src/main/kotlin/codekata/: api.kt
sample_client/src/main/kotlin/codekata/nine_holes/: nine_holes.kt
sample_client/src/main/kotlin/codekata/three_mens_morris/: three_mens_morris.kt
server-rs/: .env  Cargo.toml  protocol.md
server-rs/migrations/2021-05-22-042510_create_players/: up.sql
server-rs/migrations/2021-06-02-023819_create_games/: up.sql
server-rs/migrations/2021-06-02-025200_create_game_players/: down.sql  up.sql
server-rs/migrations/2021-07-08-203401_add_waiting_for_move_to_game_player/: down.sql  up.sql
server-rs/migrations/2021-08-14-220840_add_time_to_game_player/: down.sql  up.sql
server-rs/migrations/2021-08-14-221110_add_durations_to_game/: down.sql  up.sql
server-rs/migrations/2021-08-15-045450_add_turn_id_to_game/: down.sql  up.sql
server-rs/migrations/2021-08-16-030619_create_tournaments/: up.sql
server-rs/migrations/2021-08-16-030930_add_tournament_id_to_games/: down.sql  up.sql
server-rs/migrations/2021-08-16-031025_add_tournament_player/: down.sql  up.sql
server-rs/src/: apikey.rs  cmd.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs  tournament.rs
server-rs/src/games/: chess_game.rs  ended_game.rs  mod.rs  nine_holes.rs  three_mens_morris.rs
server-rs/tests/: session_test.rs
server-rs/tests/common/: mod.rs
