[package]
name = "server-rs"
version = "0.1.0"
authors = ["edwardwawrzynek <edward@wawrzynek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { path = "../rust_binding/chess" }
r2d2 = "0.8.9"
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
sha2 = "0.9.5"
uuid = { version = "0.4", features = ["v4"] }
itertools = "0.9.0"
bcrypt = "0.8"
lazy_static = "1.4.0"
url = "2.2.2"
rand = "0.8.0"
tungstenite = "0.13.0"
tokio-tungstenite = "0.14.0"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
tokio = { version = "1.6.1", default-features = false, features = ["net", "rt-multi-thread", "macros", "time"] }
