[package]
name = "chess"
version = "0.1.0"
authors = ["edwardwawrzynek <edward@wawrzynek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
tungstenite = "0.12.0"
url = "2.2.0"